@@ -1,5 +1,6 @@
 From version 0.9.1 to 0.9.2
 - trap aborts and exits to kill fifo and treat "0.0.0.0" as NULL (Bug: #4).
+- add contact: and expires param to registration (Bug: #5).
 
 From version 0.9.0 to 0.9.1
 - fix for unit test
